footer spacing fix

--- a/public/css/style.css
+++ b/public/css/style.css
@@ -30,6 +30,12 @@ body {
   padding-top: 5px;
   background-color: black;
   color: white;
+  margin-top: 150px;
+}
+
+.spacer {
+height: 60px;
+background: transparent;
 }
 
 #navigation-menu {
@@ -111,10 +117,6 @@ td ul li {
 
 .modal {
   font-weight: bold;
-}
-
-div {
-  margin: 20px 0;
 }
 
 /**
